fixed overlay overflow

--- a/src/AddTaskModal/AddTaskModal.css
+++ b/src/AddTaskModal/AddTaskModal.css
@@ -1,7 +1,7 @@
 .add-task-modal-overlay {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     backdrop-filter: blur(5px);
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     z-index: 99999999;
+    overflow: hidden;
 }
 
 .add-task-modal {
